[test] remove outdated latestBREE project